# opensnow

./: .dockerignore  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.pgwire.yml  docker-compose.yml  opensnow.toml
.github/workflows/: ci.yml  release.yml  terraform-validate.yml
bench/: BENCHMARK_PLAN.md  Cargo.toml  README.md  clickbench.sh  nyc_taxi.sh  run_tpch_benchmark.sh
bench/benches/: datafusion_microbench.rs
bench/results/: clickbench_baseline.md
bench/src/: lib.rs
crates/opensnow-agent/: Cargo.toml
crates/opensnow-agent/src/: agent_tools.rs  auto_schema.rs  dispatch.rs  harness.rs  lib.rs  llm.rs  mcp.rs  metadata_api.rs  nl2sql.rs  platform_tools.rs  schema_refactor_task.rs  tools.rs  warehouse_tools.rs
crates/opensnow-auth/: Cargo.toml
crates/opensnow-auth/migrations/: 001_sso.sql
crates/opensnow-auth/src/: contract.rs  jwt.rs  lib.rs  middleware.rs  oidc_verifier.rs  privileges.rs  roles.rs  secrets.rs  sso.rs  users.rs
crates/opensnow-auth/tests/: enterprise_contract.rs
crates/opensnow-catalog/: Cargo.toml
crates/opensnow-catalog/src/: lib.rs
crates/opensnow-cli/: Cargo.toml
crates/opensnow-cli/src/: main.rs
crates/opensnow-compat/: Cargo.toml
crates/opensnow-compat/src/: functions.rs  lib.rs  rewriter.rs
crates/opensnow-core/: Cargo.toml
crates/opensnow-core/src/: bench.rs  cli.rs  commands.rs  config.rs  engine.rs  engine_handle.rs  error.rs  lib.rs
crates/opensnow-distributed/: Cargo.toml
crates/opensnow-distributed/src/: coordinator.rs  distributed_executor.rs  k8s.rs  lib.rs  operator.rs  partitioner.rs  protocol.rs  redis_registry.rs  scheduler.rs  worker.rs  worker_service.rs
crates/opensnow-iceberg/: Cargo.toml
crates/opensnow-iceberg/src/: catalog.rs  lib.rs  snapshot.rs  table.rs  time_travel.rs
crates/opensnow-industry/: Cargo.toml
crates/opensnow-industry/src/: lib.rs
crates/opensnow-industry/src/banking/: compliance.rs  mod.rs  sample_data.rs  schemas.rs  udfs.rs
crates/opensnow-industry/src/telecom/: compliance.rs  mod.rs  sample_data.rs  schemas.rs  udfs.rs
crates/opensnow-ingest/: Cargo.toml
crates/opensnow-ingest/src/: config.rs  file_watcher.rs  kafka.rs  lib.rs  pipe.rs
crates/opensnow-mcp/: Cargo.toml
crates/opensnow-mcp/src/: auth.rs  engine_handle.rs  lib.rs  main.rs  tools.rs
crates/opensnow-queue/: Cargo.toml
crates/opensnow-queue/src/: job.rs  lib.rs  queue.rs  readiness.rs  worker_pool.rs
crates/opensnow-rapids/: Cargo.toml  README.md
crates/opensnow-rapids/examples/: rapids_demo.rs
crates/opensnow-rapids/src/: helper.py  lib.rs  python_bridge.rs
crates/opensnow-server/: Cargo.toml
crates/opensnow-server/src/: admin.rs  auth.rs  charts.rs  dbt.rs  ingest_buffer.rs  lib.rs  metrics.rs  pg.rs  pg_sink.rs  pipeline.rs  policy.rs  rest.rs  server.rs  sql_guardrails.rs  telemetry.rs  tenant.rs
crates/opensnow-server/static/: app.html  index.html  pipeline.html  sso-login.html
crates/opensnow-storage/: Cargo.toml
crates/opensnow-storage/src/: lib.rs
db/: README.md
db/migrations/: 000_core.sql
demo/: public-demo-manifest.json
deploy/: k3d-config.yaml  keda-scaledobject.yaml  keda-warm-pool.yaml
deploy/cloudrun/: Dockerfile  entrypoint.sh  opensnow.toml  release.sh
deploy/crds/: warehouses.opensnow.io.yaml
deploy/demo/: Caddyfile  README.md  dashboards.json  docker-compose.yml  metabase-build-dashboards.py  metabase-build-krona.py  metabase-krona-narrate.py  metabase-krona-v2.py  metabase-krona-v3.py  metabase-setup.py  opensnow.demo.toml  seed.Dockerfile  seed.sh
deploy/demo/dbt/: dbt_project.yml  profiles.yml
deploy/demo/sample-data/: bis_household_credit.parquet  ecb_bsi.parquet  ecb_cards.parquet  ecb_mir.parquet  equity_index.parquet  ert_eff_ic_q.parquet  ert_sek_eur.parquet  gov_10dd_edpt1.parquet  gov_10q_ggdebt.parquet  hbs_exp_t121.parquet  hbs_str_t211.parquet  hbs_str_t223.parquet  irt_lt_mcby_q.parquet  irt_st_q.parquet  nama_10_lp_ulc.parquet  namq_10_pe.parquet  nasq_10_f_bs.parquet  nasq_10_ki.parquet  prc_hicp_manr.parquet  prc_hpi_a.parquet  prc_hpi_q.parquet  prc_ipc_g20.parquet  scb_deposit_rates.parquet  scb_household_expenditure_by_income_decile.parquet  scb_household_expenditure_by_tenure.parquet  scb_household_expenditure_by_type.parquet  scb_household_loans_by_collateral.parquet  scb_housing_loan_rates_by_fixation.parquet  scb_lending_rates_by_fixation.parquet  scb_lending_rates_by_purpose.parquet  scb_mfi_balance_sheet.parquet  scb_money_supply.parquet  ssb_norway_household_loans_and_rates.parquet  ssb_norway_loan_rates_by_type.parquet
deploy/demo/tools/: build_credit_analysis.py  ecb_to_parquet.py  eurostat_to_parquet.py  fmp_equity_index.py  scb_to_parquet.py
deploy/grafana/: dashboard-provider.yml  opensnow-dashboard.json
deploy/helm/opensnow/: Chart.yaml  values-dev.yaml  values-enterprise-aws.yaml  values-enterprise-gcp.yaml  values.yaml
deploy/prometheus/: prometheus.yml
deploy/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
docs/: CHATGPT_APP_ALIGNMENT.md  CLI.md  DEPLOYMENT.md  ENTERPRISE_AUTH_QA_VALIDATION.md  EXTERNAL_QUICKSTART_QA_VALIDATION.md  MANAGED_SERVICE_READINESS.md  MCP_CONTROL_PLANE.md  OPEN_SNOW_UI_DBT_PIPELINE_ROADMAP.md  PRIVACY_POLICY.md  PUBLIC_DEMO.md  PUBLIC_TEST_PATH.md  QA_RELEASE_CHECKLIST.md  SECURITY_TEST_REPORT.md  SELF_HOST_S3_QUICKSTART.md  SOC2_GAP_ANALYSIS.md  SQL_COMPATIBILITY.md
integrations/dbt/: README.md  profiles.yml.example
integrations/dbt-opensnow/: README.md  setup.py
playground/: README.md  index.html
scripts/: demo-seed.py  demo.sh  dep-check.sh  e2e-k8s-smoke.sh  helm-default-secret-check.sh  public-smoke.sh  quickstart-smoke.sh
tests/: test_enterprise_secret_deployment_static.py  test_public_test_path_docs.py  test_quickstart_blockers.py
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: auth.rs  integration.rs
tests/fixtures/: aws-marketplace-entitlement-active.json  aws-marketplace-entitlement-expired.json
(+73 files in other folders)
