[package]
name = "opensnow-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent-native metadata layer for OpenSnow — AI agents can introspect, design schemas, and query autonomously"

[dependencies]
opensnow-core.workspace = true
arrow.workspace = true
datafusion.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
chrono.workspace = true
async-trait = "0.1"
# Blocking HTTP client (rustls) for the Metabase control-plane tools.
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
