[package]
name = "opensnow-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tempfile = "3"
rsa = "0.9"
