[package]
name = "opensnow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opensnow"
path = "src/main.rs"

[dependencies]
opensnow-core.workspace = true
opensnow-server.workspace = true
opensnow-storage.workspace = true
opensnow-catalog.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
arrow.workspace = true
serde.workspace = true
toml.workspace = true
parquet.workspace = true
serde_json.workspace = true
opensnow-distributed.workspace = true
opensnow-agent.workspace = true
hostname = "0.4"
