[package]
name = "opensnow-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Snowflake SQL compatibility layer for OpenSnow"

[dependencies]
datafusion.workspace = true
arrow.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
