[package]
name = "opensnow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rapids = ["dep:opensnow-rapids"]

[dependencies]
opensnow-catalog = { workspace = true }
opensnow-auth = { path = "../opensnow-auth" }
opensnow-rapids = { workspace = true, optional = true }
datafusion.workspace = true
arrow.workspace = true
parquet.workspace = true
object_store.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
url = "2"

[dev-dependencies]
tempfile = "3"
