[package]
name = "opensnow-iceberg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opensnow-core.workspace = true
arrow.workspace = true
parquet.workspace = true
object_store.workspace = true
datafusion.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
