[package]
name = "opensnow-industry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opensnow-core.workspace = true
datafusion.workspace = true
arrow.workspace = true
parquet.workspace = true
serde.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
rand = "0.8"

[dev-dependencies]
tempfile = "3"
