[package]
name = "opensnow-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opensnow-mcp"
path = "src/main.rs"

[dependencies]
opensnow-core.workspace = true
opensnow-catalog.workspace = true
opensnow-agent.workspace = true
opensnow-auth.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
arrow.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
opensnow-core.workspace = true
jsonwebtoken = "9"
base64 = "0.22"
rand = "0.8"
chrono.workspace = true
openssl = "0.10"
