[package]
name = "opensnow-rapids"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAPIDS GPU acceleration backend for OpenSnow"

[dependencies]
arrow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
