[package]
name = "opensnow-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opensnow-core.workspace = true
opensnow-auth.workspace = true
opensnow-storage.workspace = true
opensnow-catalog.workspace = true
opensnow-distributed.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = "9"
arrow.workspace = true
parquet.workspace = true
chrono.workspace = true
rusqlite.workspace = true
argon2 = "0.5"
pgwire = "0.28"
async-trait = "0.1"
futures = "0.3"
prometheus = "0.13"
hmac = "0.12"
sha2 = "0.10"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
tempfile = "3"
datafusion.workspace = true
rsa = "0.9"
rand = "0.8"
