[package]
name = "opensnow-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opensnow-core.workspace = true
opensnow-auth.workspace = true
opensnow-storage.workspace = true
opensnow-catalog.workspace = true
opensnow-distributed.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken = "9"
arrow.workspace = true
parquet.workspace = true
chrono.workspace = true
cron = "0.12"
rusqlite.workspace = true
argon2 = "0.5"
pgwire = "0.28"
tokio-postgres = "0.7"
# Opt-in transport TLS for the axum HTTP listener (rustls, matching the rustls
# already used for outbound reqwest). axum-server provides a rustls-backed
# acceptor compatible with axum 0.8 / rustls 0.23.
axum-server = { version = "0.7", features = ["tls-rustls"] }
# pgwire's default feature already compiles in rustls (aws-lc-rs provider); these
# build a tokio-rustls acceptor for the pgwire listener using the same provider,
# so there is no crypto-provider mismatch with axum-server.
tokio-rustls = "0.26"
rustls-pemfile = "2"
async-trait = "0.1"
futures = "0.3"
# default-features=false drops the optional `protobuf` exposition format (we only
# use TextEncoder for /metrics), removing the vulnerable protobuf 2.x crate
# (RUSTSEC-2024-0437) entirely.
prometheus = { version = "0.13", default-features = false }
hmac = "0.12"
sha2 = "0.10"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
tempfile = "3"
datafusion.workspace = true
rand = "0.8"
openssl = "0.10"
base64 = "0.22"
