[package]
name = "opensnow-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
object_store.workspace = true
parquet.workspace = true
arrow.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
url = "2"
